--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,6 @@
 <app-navbar></app-navbar>
 <br>
-<h1 style="text-align:center">IMPORTANCE</h1>
-<hr>
+
 <div class = "container">
 <div class="container my-4 ">
     <div class="row featurette d-flex justify-content-center align-items-center">
@@ -55,10 +54,10 @@
         <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/review1.jpg"  alt="" height="50%" width="50%">
   
-          <h2>Travel Insurance</h2>
-          <p>Travel insurance is a type insurance that covers different risks while travelling.It covers medical expenses
-              lost luggage, flight cancellations and other losses that a traveller can incur while travelling.Travel Insurance is usaually taken
-              from the day of travel till the time the traveller reaches back to their place.
+          <h2>Akrithi Bhatiya</h2>
+          <p> Always helpful and always available. The folks at (IC) are my insurance people, for everything…cars, boats,
+           houses and that makes my life easier. Peace of mind would be enough, but their bundled rates beat everyone else 
+           I’ve used before too. I Definitely recommend this family agency!
           </p>
 
          <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
@@ -67,19 +66,19 @@
             <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/review2.jpg"  alt="" height="50%" width="50%">
   
   
-          <h2>Health Insurance</h2>
-          <p>A health insurance policy extends coverage against medical expenses incurred owing to accidents,illeness or injury.
-               During this period, if an insured meets with an accidents
-             the expenses incurred for treatment purposes are borne by the insurance provider.</p>
+          <h2>Rahul singh</h2>
+          <p>Great local insurance company for personal and business related insurance. Get immediate insurance proof and easy payment options.
+            They answered all my questions and saved me a lot and provided more coverage than my current insurance.
+          </p>
           <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="./assets/img/review3.jpg"  alt="" height="50%" width="50%">
   
   
-          <h2>Flood Insurance</h2>
-          <p>Flood insurance is a type of insurance that covers a dwelling for losses sustained by water damage specifically due to flooding
-               caused by heavy or prolonged rain,melting snow,coastal storm surges,blocked storm drainage systems or levee dam failure.</p>
+          <h2>John H</h2>
+          <p> Called to get auto and home insurance quotes. (IA) and (IA) with (IC) group are very helpful. They answered all my questions and saved me a lot and provided more coverage than my current insurance.
+            I highly recommend them..</p>
           <!--<p><a class="btn btn-secondary" href="#">View details »</a></p>-->
         </div>
         
