--- a/src/app/two/two.component.html
+++ b/src/app/two/two.component.html
@@ -1,2 +1,98 @@
 <app-navbar></app-navbar>
+<br>
+<br>
+
+<div class = "container">
+    <div class="container my-4 ">
+        <div class="row featurette d-flex justify-content-center align-items-center">
+            <div class="col-md-7 order-md-2">
+                <h2 class="featurette-heading">HEALTH INSURANCE <span class="text-muted"></span></h2>
+                <p class="lead">Health insurance is a contract that requires an insurer to pay some or all of a person's healthcare costs in exchange for a premium.1 More specifically, health insurance typically pays for medical, surgical, prescription drug, and sometimes dental expenses incurred by the insured. Health insurance can reimburse the insured for expenses incurred from illness or injury, or pay the care provider directly.
+
+                    It is often included in employer benefit packages as a means of enticing quality employees, with premiums partially covered by the employer but often also deducted from employee paychecks. The cost of health insurance premiums is deductible to the payer, and the benefits received are tax-free, with certain exceptions for S corporation employees.
+                </p>
+                <button class="nav-link" routerLink="/register" style="float: left;" type="submit" class="btn btn-primary">Register Now</button>
+            </div>
+            <div class="col-md-5 order-md-1">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/health.jpg" alt=""  height="5000%" width="5000%">
+               
+            </div>
+        </div>
+        <br> <br> <br>
+    
+        <div class="row featurette d-flex justify-content-center align-items-center">
+            <div class="col-md-7 ">
+                <h2 class="featurette-heading">CAR INSURANCE <span class="text-muted"></span></h2>
+                <p class="lead">Vehicle insurance (also known as car insurance, motor insurance, or auto insurance) is insurance for cars, trucks, motorcycles, and other road vehicles. Its primary use is to provide financial protection against physical damage or bodily injury resulting from traffic collisions and against liability that could also arise from incidents in a vehicle. Vehicle insurance may additionally offer financial protection against theft of the vehicle, and against damage to the vehicle sustained from events other than traffic collisions, such as keying, weather or natural disasters, and damage sustained by colliding with stationary objects. The specific terms of vehicle insurance vary with legal regulations in each region.</p>
+                <button class="nav-link" routerLink="/register" style="float: left;" type="submit" class="btn btn-primary">Register Now</button>
+            </div>
+            <div class="col-md-5 ">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/car.jpg" alt="" height="1000%" width="1000%">
+    
+            </div>
+        </div>
+        <br> <br> <br>
+    
+        <div class="row featurette d-flex justify-content-center align-items-center">
+            <div class="col-md-7 order-md-2 ">
+                <h2 class="featurette-heading">TWO WEELER INSURANCE<span class="text-muted"></span></h2>
+                <p class="lead">Vehicle insurance (also known as car insurance, motor insurance, or auto insurance) is insurance for cars, trucks, motorcycles, and other road vehicles. Its primary use is to provide financial protection against physical damage or bodily injury resulting from traffic collisions and against liability that could also arise from incidents in a vehicle. Vehicle insurance may additionally offer financial protection against theft of the vehicle, and against damage to the vehicle sustained from events other than traffic collisions, such as keying, weather or natural disasters, and damage sustained by colliding with stationary objects. The specific terms of vehicle insurance vary with legal regulations in each region.</p>
+                <button class="nav-link" routerLink="/register" style="float: left;" type="submit" class="btn btn-primary">Register Now</button>
+            </div>
+
+            <div class="col-md-5 order-md-1">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/two.jpg" alt="" height="2050%" width="2050%">
+    
+            </div>
+        </div>
+        
+        <br> <br> <br>
+    
+        <div class="row featurette d-flex justify-content-center align-items-center">
+            <div class="col-md-7 ">
+                <h2 class="featurette-heading">HOUSE INSURANCE <span class="text-muted"></span></h2>
+                <p class="lead">Home insurance, also commonly called homeowner's insurance (often abbreviated in the US real estate industry as HOI), is a type of property insurance that covers a private residence. It is an insurance policy that combines various personal insurance protections, which can include losses occurring to one's home, its contents, loss of use (additional living expenses), or loss of other personal possessions of the homeowner, as well as liability insurance for accidents that may happen at the home or at the hands of the homeowner within the policy territory.</p>
+                <button class="nav-link" routerLink="/register" style="float: left;" type="submit" class="btn btn-primary">Register Now</button>
+            </div>
+            <div class="col-md-5 ">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/house.jpg" alt="" height="1000%" width="1000%">
+    
+            </div>
+        </div>
+        <br> <br> <br>
+
+        <div class="row featurette d-flex justify-content-center align-items-center">
+            <div class="col-md-7 order-md-2 ">
+                <h2 class="featurette-heading">TRAVEL INSURANCE<span class="text-muted"></span></h2>
+                <p class="lead">Travel insurance is an insurance product for covering unforeseen losses incurred while travelling, either internationally or domestically. Basic policies generally only cover emergency medical expenses while overseas, while comprehensive policies typically include coverage for trip cancellation, lost luggage, flight delays, public liability, and other expenses.</p>
+                <button class="nav-link" routerLink="/register" style="float: left;" type="submit" class="btn btn-primary">Register Now</button>
+            </div>
+            <div class="col-md-5 order-md-1">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/travel.png" alt="" height="2050%" width="2050%">
+    
+            </div>
+        </div>
+
+        <br> <br> <br>
+    
+        <div class="row featurette d-flex justify-content-center align-items-center">
+            <div class="col-md-7 ">
+                <h2 class="featurette-heading">LIFE INSURANCE <span class="text-muted"></span></h2>
+                <p class="lead">Life insurance (or life assurance, especially in the Commonwealth of Nations) is a contract between an insurance policy holder and an insurer or assurer, where the insurer promises to pay a designated beneficiary a sum of money upon the death of an insured person (often the policy holder). Depending on the contract, other events such as terminal illness or critical illness can also trigger payment. The policy holder typically pays a premium, either regularly or as one lump sum. The benefits may include other expenses, such as funeral expenses.</p>
+                <button class="nav-link" routerLink="/register" style="float: left;" type="submit" class="btn btn-primary">Register Now</button>
+            </div>
+            <div class="col-md-5 ">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="./assets/img/life.jpg" alt="" height="1000%" width="1000%">
+    
+            </div>
+        </div>
+        <br> <br> <br>
+
+
+    
+    </div>
+    </div>
+
+    
+
 <app-footer></app-footer>
