--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
               <a class="nav-link" routerLink="/about">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" routerLink="/services">Services</a>
+              <a class="nav-link" routerLink="/two">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/login">LogIn</a>
