--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -102,7 +102,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Name:Bhuvaneshwari</h5>
                     <p class="card-text">Contact No:7338039604  <br> Email: kbhuvaneshwari28@gmail.com</p>
-                    <a href="https://bit.ly/3MzKRCd" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <a href="https://bit.ly/3MzKRCd" class="btn btn-primary"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
@@ -116,7 +116,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Name: Sivani</h5>
                     <p class="card-text">Contact No:9110234831  <br> Email: shivanibg22@gmail.com</p>
-                    <a href="https://github.com/shivanibg44/Infinity.git" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <a href="https://github.com/shivanibg44/Infinity.git" class="btn btn-primary"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
@@ -126,11 +126,11 @@
         <!--hareesh Strted-->
         <div class="col-md">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/Hareesh_1.jpg" alt="Card image cap" height="300px" width="100px">
+                <img class="card-img-top" src="./assets/img/Hareesh.png" alt="Card image cap" height="300px" width="100px">
                 <div class="card-body">
                     <h5 class="card-title">Name:G. Hareesh</h5>
                     <p class="card-text">Contact No: 8688126661 <br> Email: hareeshraj279@gmail.com</p>
-                    <a href="https://bit.ly/3GEyNuV" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <a href="https://bit.ly/3GEyNuV" class="btn btn-primary"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Name: Guru Prasad</h5>
                     <p class="card-text">Contact No:9845879581  <br> Email: gurucr4@gmail.com</p>
-                    <a href="http://shorturl.at/exCS2" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <a href="http://shorturl.at/exCS2" class="btn btn-primary"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
@@ -162,7 +162,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Name: Malathi</h5>
                     <p class="card-text">Contact No: 9986510305 <br> Email: malathisambaji24@gmail.com</p>
-                    <a href="https://tinyurl.com/y8583sdl" class="btn btn-danger"><i class="fab fa-github" style="color: white;"></i> Connect</a>
+                    <a href="https://tinyurl.com/y8583sdl" class="btn btn-primary"><i class="fab fa-github" style="color: white;"></i> Connect</a>
                 </div>
             </div>
             <br>
